--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   lottie: ^1.2.2
   get: ^4.6.1
+  firebase_auth: ^3.3.13
+  firebase_core: ^1.14.0
+  cloud_firestore: ^3.1.11
 
 dev_dependencies:
   flutter_test:
