--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^3.3.13
   firebase_core: ^1.14.0
   cloud_firestore: ^3.1.11
+  google_sign_in: ^5.2.4
 
 dev_dependencies:
   flutter_test:
