--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   firebase_core: ^1.14.0
   cloud_firestore: ^3.1.11
   google_sign_in: ^5.2.4
+  http: ^0.13.4
+  flutter_facebook_auth: ^4.2.1
 
 dev_dependencies:
   flutter_test:
