--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   google_sign_in: ^5.2.4
   http: ^0.13.4
   flutter_facebook_auth: ^4.2.1
+  provider: ^6.0.2
+  connectivity_plus: ^2.3.0
 
 dev_dependencies:
   flutter_test:
