--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_facebook_auth: ^4.2.1
   provider: ^6.0.2
   connectivity_plus: ^2.3.0
+  cached_network_image: ^3.2.0
 
 dev_dependencies:
   flutter_test:
@@ -59,11 +60,15 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
   flutter_launcher_icons: ^0.9.2
+  flutter_app_name: ^0.1.1
 
 flutter_icons:
   android: true
   ios: true
   image_path: "assets/logo.png"
+
+flutter_app_name:
+  name: "RetailCity"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
