--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   provider: ^6.0.2
   connectivity_plus: ^2.3.0
   cached_network_image: ^3.2.0
+  carousel_slider: ^4.1.1
+  dots_indicator: ^2.1.0
 
 dev_dependencies:
   flutter_test:
